FIX: fix role type